# otus_c_basic

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  README.md  World.cpp  dl_list.cpp  dl_list.h  main.cpp  move_me_out.cpp  seqContainer.cpp  seqContainer.h  seqContainer_tests.cpp  sl_list.cpp  sl_list.h  stat.cpp  stat.hpp  test_guess.py  tests.h  top_words.cpp  vector.h
hw1/: hello_world.cpp
test/: dl_list_tests.cpp  seqContainer_tests.cpp
